--- a/SocketServer/package.json
+++ b/SocketServer/package.json
@@ -9,7 +9,10 @@
   "author": "oddLeaf",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.7.4",
     "socket.io": "^2.3.0"
   }
 }
