--- a/SocketChatView/package.json
+++ b/SocketChatView/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ngx-socket-io": "^3.0.1",
