--- a/SocketServer/package.json
+++ b/SocketServer/package.json
@@ -9,10 +9,14 @@
   "author": "oddLeaf",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.7.0",
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
+    "morgan": "^1.9.1",
     "socket.io": "^2.3.0"
   }
 }
